# kepler-doc

./: .commitlintrc.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CNAME  OWNERS  README.md  index.html  index.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: dev container.json  devcontainer.json
.github/workflows/: documentation.yaml  mkdocs-ghpages.yaml  pages.yml  pr.yaml  super-linter.yaml
archive/: index.html
archive/README.zh-qc/: index.html
archive/drawio/: disable_estimator_sidecar.drawio  disable_model_server.drawio  model_arch.drawio  model_training.drawio
archive/hardwareengagement/: index.html
data/: adopters.yaml
demos/: README.md
design/architecture/: index.html
design/ebpf_in_kepler/: index.html
design/kepler-energy-sources/: index.html
design/metrics/: index.html
design/power_model/: index.html
docs/: CNAME  Makefile  index.md  index.zh.md  model-server-compatibility.md  model-server-compatibility.zh-qc.md  model-server-compatibility.zh.md
docs/archive/: README.md  README.zh-qc.md  README.zh.md  architecture.zh.md  power_model.zh.md
docs/design/: architecture.md  architecture.zh.md  ebpf_in_kepler.md  ebpf_in_kepler.zh.md  kepler-energy-sources.md  metrics.md  metrics.zh.md  power_estimation.md  power_model.md  power_model.zh.md
docs/developer/: architecture.md  dev-docs.md  dev-docs.zh.md
docs/drawio/: disable_model_server.drawio  full_integration.drawio  model_training.drawio
docs/hardwareengagement/: index.md
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  output.json  search.html  searchindex.js
docs/installation/: Kepler-Telegraf-integartion-steps  Kepler-Telegraf-integartion-steps.md  Kepler-Telegraf-integration-steps.md  community-operator.md  community-operator.zh.md  installation.md  installation.zh.md  kepler-helm.md  kepler-helm.zh.md  kepler-operator.md  kepler-operator.zh.md  kepler-rpm.md  kepler.md  local-cluster.md  strategy.md
docs/kepler_model_server/: api.md  (+5 more)
drawio/: disable_estimator_sidecar.drawio
hardwareengagement/: index.html
html/: index.html  objects.inv  search.html
model-server-compatibility/: index.html
model-server-compatibility.zh-qc/: index.html
overrides/: main.html
platform-validation/: index.html
search/: search_index.json
templates/: adopters.md
zh/: index.html
(+289 files in other folders)
